Code fixes